--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -35,6 +35,6 @@
     <script src="./index.js" type="module"></script>
   </head>
   <body>
-    <canvas id="game"></canvas>
+    <canvas id="game"> </canvas>
   </body>
 </html>
